conda and vim plugins

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -157,7 +157,7 @@ $mainMod = SUPER
 bind = ALT, Space, exec, $launcher1
 bind = $mainMod, Return, exec, $term
 bind = $mainMod, E, exec, thunar
-bind = $mainMod, B, exec, brave
+bind = $mainMod, B, exec, gio launch $HOME/.local/share/applications/brave-browser.desktop
 
 #bind = SUPER, Space, pass, 
 bind = $mainMod, T,         exec, ~/.config/scripts/animations.sh toggle
@@ -246,3 +246,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+bindl =,switch[HP WMI camera shutter],exec,notify-send.sh test
