i actually dont know

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ exec-once = swaync
 exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
-exec-once = blueman-applet
+exec-once = blueman-tray
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = ~/.config/scripts/lisgd_touchscreen.sh
