changed ncspot to spt

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,6 +30,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-tray
+exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = ~/.config/scripts/lisgd_touchscreen.sh
@@ -129,10 +130,10 @@ windowrule = size 70% 70%, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = center, ^(brave-mail.google.com__mail_u_.-Default)$
 
-windowrule = float, ^(ncspot)$
-windowrule = size 70% 70%, ^(ncspot)$
-windowrule = opacity $spd_opacity, ^(ncspot)$
-windowrule = center, ^(ncspot)$
+windowrule = float, ^(spt)$
+windowrule = size 70% 70%, ^(spt)$
+windowrule = opacity $spd_opacity, ^(spt)$
+windowrule = center, ^(spt)$
 
 windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
