spotify-web support

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,6 +144,11 @@ windowrule = size 70% 70%, ^(brave-web.whatsapp.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
 windowrule = center, ^(brave-web.whatsapp.com.+)$
 
+windowrule = float, ^(brave-open.spotify.com.+)$
+windowrule = size 70% 70%, ^(brave-open.spotify.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-open.spotify.com.+)$
+windowrule = center, ^(brave-open.spotify.com.+)$
+
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
 windowrule = pseudo,fcitx
