trying to fix fcixit + jp engine

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -185,15 +185,18 @@ bind = ALT, Tab, bringactivetotop,
 bind = ALT SHIFT, Tab, cyclenext, prev
 bind = ALT SHIFT, Tab, bringactivetotop,
 
-bind=,XF86MonBrightnessUp,     exec, $brightness up 5
-bind=,XF86MonBrightnessDown,   exec, $brightness down 5
-bind=,XF86AudioMute,           exec, $volume mute
-bind=,XF86AudioLowerVolume,    exec, $volume down 5
-bind=,XF86AudioRaiseVolume,    exec, $volume up 5
+bindl=,XF86MonBrightnessUp,     exec, $brightness up 5
+bindl=,XF86MonBrightnessDown,   exec, $brightness down 5
+bindl=,XF86AudioMute,           exec, $volume mute
+bindl=,XF86AudioLowerVolume,    exec, $volume down 5
+bindl=,XF86AudioRaiseVolume,    exec, $volume up 5
 bind=,XF86AudioMicMute,        exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
 bind=,XF86AudioPrev,           exec, playerctl previous
 bind=,XF86AudioNext,           exec, playerctl next
 bind=,XF86AudioPlay,           exec, playerctl play-pause
+# bind=,XF86AudioPrev,           pass, playerctl previous
+# bind=,XF86AudioNext,           pass, playerctl next
+# bind=,XF86AudioPlay,           pass, playerctl play-pause
 bind=SHIFT,F9,                 exec, playerctl position 5-
 bind=SHIFT,F6,                 exec, $volume down 1
 bind=SHIFT,F7,                 exec, $volume up 1
