fixed icons and google keep

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,6 +144,11 @@ windowrule = size 70% 70%, ^(brave-web.whatsapp.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
 windowrule = center, ^(brave-web.whatsapp.com.+)$
 
+windowrule = float, ^(brave-keep.google.com.+)$
+windowrule = size 70% 70%, ^(brave-keep.google.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-keep.google.com.+)$
+windowrule = center, ^(brave-keep.google.com.+)$
+
 windowrule = float, ^(brave-open.spotify.com.+)$
 windowrule = size 70% 70%, ^(brave-open.spotify.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-open.spotify.com.+)$
