--- a/.local/share/applications/spotify-tui.desktop
+++ b/.local/share/applications/spotify-tui.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Spotify-tui
 Comment=A Spotify client for the terminal written in Rust
 Exec=kitty --class=spt zsh -c "[[ $(pgrep spt) ]] || spt"
-Icon=spt
+Icon=spotify
 Terminal=false
 Categories=AudioVideo;Audio;Player;ConsoleOnly
 Keywords=spotify;music;player
