--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -175,6 +175,7 @@
             "brave-calendar.google.com__calendar_u_1_r-Default":"",
             "brave-mail.google.com__mail_u_.-Default": "",
             "brave-web.whatsapp.com__-Default": "",
+            "brave-keep.google.com__u_1_-Default": "󰛜",
             "org.telegram.desktop": "",
             "brave-browser": "󰖟",
             "brave-open.spotify.com__-Default": "",
