--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -139,6 +139,11 @@ windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
 windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
 
+windowrule = float, ^(brave-to-do.live.com.+)$
+windowrule = size 70% 70%, ^(brave-to-do.live.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-to-do.live.com.+)$
+windowrule = center, ^(brave-to-do.live.com.+)$
+
 windowrule = float, ^(brave-web.whatsapp.com.+)$
 windowrule = size 70% 70%, ^(brave-web.whatsapp.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
