--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -58,7 +58,7 @@
                 "actions": [ 
                     {
                         "label": "⏾ Hibernate",
-                        "command": "systemctl hibernate"
+                        "command": "systemctl hibernate; swaync-client -cp"
                     },
                     {
                         "label": "   Reboot",
@@ -66,7 +66,7 @@
                     },
                     {
                         "label": "   Lock",
-                        "command": "swaylock -elFf"
+                        "command": "swaylock -elFf; swaync-client -cp"
                     },
                     {
                         "label": "   Shut down",
