we now have hyprgrass! lisgd not needed anymore. Also win-W resize mode

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,7 @@
+
+# GLOBAL VARIABLES 
+
+source = ~/.cache/wal/colors-hyprland.conf
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = kitty
 $filebrowser = thunar
@@ -17,10 +21,13 @@ $printscr_sw = ~/.config/scripts/print_window.sh
 
 $scratchpad_name = 󰉇
 
-monitor = eDP-1, 3000x2000@60, 0x0, 2
-monitor = ,preferred,auto,auto
+# DISPLAY
 
-#exec-once = swww init
+monitor = eDP-1, 3000x2000@60, 0x0, 2
+monitor =, preferred,auto,auto
+
+# STARTUP
+
 exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
 exec-once = iio-hyprland
@@ -31,13 +38,13 @@ exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-tray
 exec-once = rfkill block bluetooth
+# exec-once = gio launch .config/autostart/*
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
-exec-once = ~/.config/scripts/lisgd_touchscreen.sh
-# exec-once = ~/.config/scripts/start_wvkbd.sh
-exec-once = gio launch .config/autostart/*
+# exec-once = ~/.config/scripts/lisgd_touchscreen.sh
+exec-once = hyprpm reload -n
 
-source = ~/.cache/wal/colors-hyprland.conf
+# ENV VAR
 
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORM,wayland
@@ -48,6 +55,8 @@ env = GTK_IM_MODULE,wayland
 env = QT_IM_MODULE,fcitx
 env = RANGER_LOAD_DEFAULT_RC,FALSE
 env = SCRATCHPAD_NAME,$scratchpad_name
+
+# SETTINGS
 
 input {
     kb_layout = us
@@ -61,16 +70,6 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-general {
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba($color14ee)
-    col.inactive_border = rgba($color1ff)
-    layout = dwindle
-    resize_on_border = true
 }
 
 decoration {
@@ -103,13 +102,6 @@ master {
     new_is_master = true
 }
 
-gestures {
-    workspace_swipe = on
-    workspace_swipe_fingers = 4
-    workspace_swipe_distance = 100
-    workspace_swipe_cancel_ratio = 0.2
-}
-
 misc {
     disable_hyprland_logo = true
     force_hypr_chan = true
@@ -117,135 +109,218 @@ misc {
     swallow_regex = ^(kitty)$
 }
 
+general {
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 2
+    col.active_border = rgba($color14ee)
+    col.inactive_border = rgba($color1ff)
+    layout = dwindle
+    resize_on_border = true
+}
+
+# WINDOW RULES
+
 $spd_opacity = 0.95
-windowrule = opacity 0.9, ^(kitty)$
-
-windowrule = float,        ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = size 70% 70%, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = center,       ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-
-windowrule = float, ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = size 70% 70%, ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = center, ^(brave-mail.google.com__mail_u_.-Default)$
-
-windowrule = float, ^(spt)$
-windowrule = size 70% 70%, ^(spt)$
-windowrule = opacity $spd_opacity, ^(spt)$
-windowrule = center, ^(spt)$
-
-windowrule = float, ^(org.telegram.desktop)$
-windowrule = center, ^(org.telegram.desktop)$
-windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
-
-windowrule = float, ^(brave-to-do.live.com.+)$
-windowrule = size 70% 70%, ^(brave-to-do.live.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-to-do.live.com.+)$
-windowrule = center, ^(brave-to-do.live.com.+)$
-
-windowrule = float, ^(brave-web.whatsapp.com.+)$
-windowrule = size 70% 70%, ^(brave-web.whatsapp.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
-windowrule = center, ^(brave-web.whatsapp.com.+)$
-
-windowrule = float, ^(brave-keep.google.com.+)$
-windowrule = size 70% 70%, ^(brave-keep.google.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-keep.google.com.+)$
-windowrule = center, ^(brave-keep.google.com.+)$
-
-windowrule = float, ^(brave-open.spotify.com.+)$
-windowrule = size 70% 70%, ^(brave-open.spotify.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-open.spotify.com.+)$
-windowrule = center, ^(brave-open.spotify.com.+)$
+windowrule = opacity $spd_opacity, ^(kitty)$
 
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
-windowrule = pseudo,fcitx
 
-windowrule = float, ^(wofi)$
-windowrule = center, ^(wofi)$
-windowrule = noanim, ^(wofi)$
-windowrule = noborder, ^(wofi)$
+windowrule = pseudo, fcitx
+
+windowrule = float,     ^(wofi)$
+windowrule = center,    ^(wofi)$
+windowrule = noanim,    ^(wofi)$
+windowrule = noborder,  ^(wofi)$
+
+windowrule = float,                ^(org.telegram.desktop)$
+windowrule = center,               ^(org.telegram.desktop)$
+windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
+
+windowrule = float,                ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = size 70% 70%,         ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = center,               ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+
+windowrule = float,                ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = size 70% 70%,         ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = center,               ^(brave-mail.google.com__mail_u_.-Default)$
+
+windowrule = float,                ^(spt)$
+windowrule = size 70% 70%,         ^(spt)$
+windowrule = opacity $spd_opacity, ^(spt)$
+windowrule = center,               ^(spt)$
+
+windowrule = float,                ^(brave-to-do.live.com.+)$
+windowrule = size 70% 70%,         ^(brave-to-do.live.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-to-do.live.com.+)$
+windowrule = center,               ^(brave-to-do.live.com.+)$
+
+windowrule = float,                ^(brave-web.whatsapp.com.+)$
+windowrule = size 70% 70%,         ^(brave-web.whatsapp.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
+windowrule = center,               ^(brave-web.whatsapp.com.+)$
+
+windowrule = float,                ^(brave-keep.google.com.+)$
+windowrule = size 70% 70%,         ^(brave-keep.google.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-keep.google.com.+)$
+windowrule = center,               ^(brave-keep.google.com.+)$
+
+windowrule = float,                ^(brave-open.spotify.com.+)$
+windowrule = size 70% 70%,         ^(brave-open.spotify.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-open.spotify.com.+)$
+windowrule = center,               ^(brave-open.spotify.com.+)$
+
+
+# KEY BINDINGS
 
 $mainMod = SUPER
 
-bind = ALT, Space, exec, $launcher1
-bind = $mainMod, Return, exec, $term
-bind = $mainMod, E, exec, thunar
-bind = $mainMod, B, exec, gio launch $HOME/.local/share/applications/brave-browser.desktop
+## GLOBAL KEYS
 
-#bind = SUPER, Space, pass, 
-bind = $mainMod, T,         exec, ~/.config/scripts/animations.sh toggle
-bind = $mainMod SHIFT, C,   exec, hyprctl reload
-bind = $mainMod, W,         exec, ~/.config/scripts/selective_kill.sh
-bind = $mainMod SHIFT, W,   killactive,
-bind = $mainMod, V,         exec,   $menu_paste
-bind = $mainMod, F,         fullscreen, 1
-bind = $mainMod SHIFT, F,   fullscreen, 0
-bind = $mainMod, Minus,     togglefloating,
-bind = $mainMod, Minus,     centerwindow,
-bind = $mainMod, N,         exec,   swaync-client -t -sw
-bind = $mainMod, Escape,    exec,   $powermenu
+bind = $mainMod SHIFT, C,      exec,             hyprctl reload
+bind = $mainMod SHIFT, Q,      killactive, 
+bind = $mainMod SHIFT, T,      exec,             ~/.config/scripts/animations.sh toggle
+bind = $mainMod SHIFT, O,      pseudo, 
+bind = $mainMod,       V,      exec,             $menu_paste
+bind = $mainMod,       Return, exec,             $term
+bind = $mainMod,       E,      exec,             thunar
+bind = $mainMod,       B,      exec,             gio launch $HOME/.local/share/applications/brave-browser.desktop
+bind = $mainMod,       N,      exec,             swaync-client -t -sw
+bind = $mainMod,       Escape, exec,             $powermenu
+bind = $mainMod,       Tab,    togglesplit, 
+bind = ALT,            Space,  exec,             $launcher1
+bind = ALT,            Tab,    cyclenext, 
+bind = ALT,            Tab,    bringactivetotop, 
+bind = ALT      SHIFT, Tab,    cyclenext,        prev
+bind = ALT      SHIFT, Tab,    bringactivetotop, 
 
-bind = $mainMod, O, pseudo, # dwindle
-bind = $mainMod, Tab, togglesplit, # dwindle
-bind = ALT, Tab, cyclenext,
-bind = ALT, Tab, bringactivetotop,
-bind = ALT SHIFT, Tab, cyclenext, prev
-bind = ALT SHIFT, Tab, bringactivetotop,
+## FUNCTION BUTTONS
 
-bindl=,XF86MonBrightnessUp,     exec, $brightness up 5
-bindl=,XF86MonBrightnessDown,   exec, $brightness down 5
-bindl=,XF86AudioMute,           exec, $volume mute
-bindl=,XF86AudioLowerVolume,    exec, $volume down 5
-bindl=,XF86AudioRaiseVolume,    exec, $volume up 5
-bind=,XF86AudioMicMute,        exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
-bind=,XF86AudioPrev,           exec, playerctl previous
-bind=,XF86AudioNext,           exec, playerctl next
-bind=,XF86AudioPlay,           exec, playerctl play-pause
-# bind=,XF86AudioPrev,           pass, playerctl previous
-# bind=,XF86AudioNext,           pass, playerctl next
-# bind=,XF86AudioPlay,           pass, playerctl play-pause
-bind=SHIFT,F9,                 exec, playerctl position 5-
-bind=SHIFT,F6,                 exec, $volume down 1
-bind=SHIFT,F7,                 exec, $volume up 1
-bind=SHIFT,F3,                 exec, $brightness up 1
-bind=SHIFT,F2,                 exec, $brightness down 1
-bind=SHIFT,F11,                exec, playerctl position 5+
+bindm= $mainMod, mouse:272,                     movewindow
+bindm= $mainMod, mouse:273,                     resizewindow
+bindl=,          switch[HP WMI camera shutter], exec,         notify-send.sh test
+
+bindm= $mainMod, mouse:272,                     movewindow
+bindm= $mainMod, mouse:273,                     resizewindow
+bindl=,          XF86MonBrightnessUp,           exec,         $brightness up 5
+bindl=,          XF86MonBrightnessDown,         exec,         $brightness down 5
+bindl=,          XF86AudioMute,                 exec,         $volume mute
+bindl=,          XF86AudioLowerVolume,          exec,         $volume down 5
+bindl=,          XF86AudioRaiseVolume,          exec,         $volume up 5
+bind =,          XF86AudioMicMute,              exec,         wpctl set-mute @DEFAULT_SOURCE@ toggle
+bind =,          XF86AudioPrev,                 exec,         playerctl previous
+bind =,          XF86AudioNext,                 exec,         playerctl next
+bind =,          XF86AudioPlay,                 exec,         playerctl play-pause
+bind = SHIFT,    F9,                            exec,         playerctl position 5-
+bind = SHIFT,    F6,                            exec,         $volume down 1
+bind = SHIFT,    F7,                            exec,         $volume up 1
+bind = SHIFT,    F3,                            exec,         $brightness up 1
+bind = SHIFT,    F2,                            exec,         $brightness down 1
+bind = SHIFT,    F11,                           exec,         playerctl position 5+
+
+## PRINT SCREEN
 
 bind=CONTROL SHIFT,Print, exec, $printscr_sw
 bind=SHIFT,Print, exec, $printscr_ss
 bind=$mainMod, Print, exec, $printscr_f
 bind=,Print, exec, $printscr_sf
 
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+## MODES
 
-bind = $mainMod SHIFT, h, movewindow, l
-bind = $mainMod SHIFT, l, movewindow, r
-bind = $mainMod SHIFT, k, movewindow, u
-bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod, W, submap, resize
+submap = resize
+    bind =,         W,      cyclenext, 
+    bind =,         W,      bringactivetotop, 
+    bind =,         W,      submap, reset
 
-bind = $mainMod CONTROL, h, resizeactive, l
-bind = $mainMod CONTROL, l, resizeactive, r
-bind = $mainMod CONTROL, k, resizeactive, u
-bind = $mainMod CONTROL, j, resizeactive, d
+    bind = SHIFT,   W,      cyclenext, prev
+    bind = SHIFT,   W,      bringactivetotop, 
+    bind = SHIFT,   W,      submap, reset
 
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, exec, ~/.config/scripts/swap_scratchpad.sh
-bind = $mainMod, Comma, workspace, r-1
-bind = $mainMod, Period, workspace, r+1
+    bind =,         Q,      exec, ~/.config/scripts/selective_kill.sh
+    bind =,         Q,      submap, reset
+
+    bind = SHIFT,   Q,      killactive, 
+    bind = SHIFT,   Q,      submap, reset
+
+    bind = SHIFT,   F,      fullscreen, 0
+    bind = SHIFT,   F,      submap, reset
+    bind =,         F,      fullscreen, 1
+    bind =,         F,      submap, reset
+
+    bind =,         Space,  togglefloating, 
+    bind =,         Space,  centerwindow, 
+    bind =,         C,      centerwindow, 
+
+    bind =,         Tab,    togglesplit, 
+    bind =,         h,      movefocus, l
+    bind =,         l,      movefocus, r
+    bind =,         k,      movefocus, u
+    bind =,         j,      movefocus, d
+
+    bind = SHIFT,   h,      movewindow,   l
+    bind = SHIFT,   l,      movewindow,   r
+    bind = SHIFT,   k,      movewindow,   u
+    bind = SHIFT,   j,      movewindow,   d
+
+    bind = CONTROL, h,      resizeactive, l
+    bind = CONTROL, l,      resizeactive, r
+    bind = CONTROL, k,      resizeactive, u
+    bind = CONTROL, j,      resizeactive, d
+
+    bind =,         1,      workspace, 1
+    bind =,         2,      workspace, 2
+    bind =,         3,      workspace, 3
+    bind =,         4,      workspace, 4
+    bind =,         5,      workspace, 5
+    bind =,         6,      workspace, 6
+    bind =,         7,      workspace, 7
+    bind =,         8,      workspace, 8
+    bind =,         9,      workspace, 9
+    bind =,         Comma,  workspace, r-1
+    bind =,         Period, workspace, r+1
+    bind = SHIFT,   1,      movetoworkspacesilent, 1
+    bind = SHIFT,   2,      movetoworkspacesilent, 2
+    bind = SHIFT,   3,      movetoworkspacesilent, 3
+    bind = SHIFT,   4,      movetoworkspacesilent, 4
+    bind = SHIFT,   5,      movetoworkspacesilent, 5
+    bind = SHIFT,   6,      movetoworkspacesilent, 6
+    bind = SHIFT,   7,      movetoworkspacesilent, 7
+    bind = SHIFT,   8,      movetoworkspacesilent, 8
+    bind = SHIFT,   9,      movetoworkspacesilent, 9
+    bind = SHIFT,   Comma,  movetoworkspacesilent, r-1
+    bind = SHIFT,   Period, movetoworkspacesilent, r+1
+
+    bindm=,         mouse:272,   movewindow
+    bindm=,         mouse:273,   resizewindow
+    bindm=,         longpress:2, movewindow
+    bindm=,         longpress:3, resizewindow
+    bind = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
+    bind =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
+
+    bind =,          Escape, submap, reset
+    bind = $mainMod, W,      submap, reset
+submap = reset
+
+# WORKSPACE AND WINDOWS
+
+bind = $mainMod, 1,          workspace, 1
+bind = $mainMod, 2,          workspace, 2
+bind = $mainMod, 3,          workspace, 3
+bind = $mainMod, 4,          workspace, 4
+bind = $mainMod, 5,          workspace, 5
+bind = $mainMod, 6,          workspace, 6
+bind = $mainMod, 7,          workspace, 7
+bind = $mainMod, 8,          workspace, 8
+bind = $mainMod, 9,          workspace, 9
+bind = $mainMod, 0,          exec,      ~/.config/scripts/swap_scratchpad.sh
+bind = $mainMod, Comma,      workspace, r-1
+bind = $mainMod, Period,     workspace, r+1
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up,   workspace, e-1
 
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
@@ -260,10 +335,25 @@ bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
 bind = $mainMod SHIFT, Comma, movetoworkspacesilent, r-1
 bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
 
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod, longpress:2, movewindow
+bindm = $mainMod, longpress:3, resizewindow
 
-bindl =,switch[HP WMI camera shutter],exec,notify-send.sh test
+# GESTURES
+
+gestures {
+    workspace_swipe = on
+    workspace_swipe_fingers = 4
+    workspace_swipe_distance = 200
+    workspace_swipe_cancel_ratio = 0.1
+}
+
+plugin:touch_gestures {
+    sensitivity = 5.0
+    long_press_delay = 400
+
+    # must be >= 3
+    workspace_swipe_fingers = 4
+
+}
