more mouse configs hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -230,7 +230,8 @@ bind=,Print, exec, $printscr_sf
 
 ## MODES
 
-bind = $mainMod, W, submap, resize
+bindr=,          swipe:4:u, submap, resize
+bind = $mainMod, W,         submap, resize
 submap = resize
     bind =,         W,      cyclenext, 
     bind =,         W,      bringactivetotop, 
@@ -265,6 +266,10 @@ submap = resize
     bind = SHIFT,   l,      movewindow,   r
     bind = SHIFT,   k,      movewindow,   u
     bind = SHIFT,   j,      movewindow,   d
+    bind =, swipe:3:l,      movewindow,   l
+    bind =, swipe:3:r,      movewindow,   r
+    bind =, swipe:3:u,      movewindow,   u
+    bind =, swipe:3:d,      movewindow,   d
 
     bind = CONTROL, h,      resizeactive, l
     bind = CONTROL, l,      resizeactive, r
@@ -296,8 +301,10 @@ submap = resize
 
     bindm=,         mouse:272,   movewindow
     bindm=,         mouse:273,   resizewindow
-    bindm=,         longpress:2, movewindow
-    bindm=,         longpress:3, resizewindow
+    bindm=,         longpress:1, movewindow
+    bindm=,         longpress:2, resizewindow
+    bind =,         tap:3,       togglefloating, 
+    bind =,         tap:4,       submap,         reset
     bind = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
     bind =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 
@@ -337,8 +344,8 @@ bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-bindm = $mainMod, longpress:2, movewindow
-bindm = $mainMod, longpress:3, resizewindow
+bindm = $mainMod, longpress:1, movewindow
+bindm = $mainMod, longpress:2, resizewindow
 
 # GESTURES
 
