--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -104,7 +104,7 @@ master {
 
 misc {
     disable_hyprland_logo = true
-    force_hypr_chan = true
+    # force_hypr_chan = true
     enable_swallow = false
     swallow_regex = ^(kitty)$
 }
@@ -361,5 +361,7 @@ plugin:touch_gestures {
     long_press_delay = 500
     # must be >= 3
     workspace_swipe_fingers = 4
-
+    experimental {
+        send_cancel = 0
+    }
 }
