removed the switch test notification

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -201,7 +201,8 @@ bind = ALT      SHIFT, Tab,    bringactivetotop,
 
 bindm= $mainMod, mouse:272,                     movewindow
 bindm= $mainMod, mouse:273,                     resizewindow
-bindl=,          switch[HP WMI camera shutter], exec,         notify-send.sh test
+# This only triggers when turning camera around
+# bindl=,          switch[HP WMI camera shutter], exec,         notify-send.sh test
 
 bindm= $mainMod, mouse:272,                     movewindow
 bindm= $mainMod, mouse:273,                     resizewindow
