--- a/.config/tealdeer/config.toml
+++ b/.config/tealdeer/config.toml
@@ -6,7 +6,7 @@ italic = false
 [style.command_name]
 foreground = "cyan"
 underline = false
-bold = false
+bold = true
 italic = false
 
 [style.example_text]
