--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -306,8 +306,8 @@ submap = resize
     bindm=,         longpress:2, resizewindow
     bind =,         tap:3,       togglefloating, 
     bind =,         tap:4,       submap,         reset
-    bind = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
-    bind =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
+    bindr = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
+    bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 
     bind =,          Escape, submap, reset
     bind = $mainMod, W,      submap, reset
@@ -324,7 +324,7 @@ bind = $mainMod, 6,          workspace, 6
 bind = $mainMod, 7,          workspace, 7
 bind = $mainMod, 8,          workspace, 8
 bind = $mainMod, 9,          workspace, 9
-bind = $mainMod, 0,          exec,      ~/.config/scripts/swap_scratchpad.sh
+bindr= $mainMod, 0,          exec,      ~/.config/scripts/swap_scratchpad.sh
 bind = $mainMod, Comma,      workspace, r-1
 bind = $mainMod, Period,     workspace, r+1
 bind = $mainMod, mouse_down, workspace, e+1
@@ -339,7 +339,7 @@ bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
 bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
+bindr= $mainMod SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
 bind = $mainMod SHIFT, Comma, movetoworkspacesilent, r-1
 bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
 
