--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -79,7 +79,7 @@ decoration {
     shadow_render_power = 2
     col.shadow = rgba($color13ee)
     active_opacity = 1.0
-    inactive_opacity = 0.95
+    inactive_opacity = 0.85
 }
 
 animations {
@@ -121,8 +121,9 @@ general {
 
 # WINDOW RULES
 
-$spd_opacity = 0.95
+$spd_opacity = 0.9
 windowrule = opacity $spd_opacity, ^(kitty)$
+windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
