disabled 4 tap enter resize

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -232,7 +232,7 @@ bind=,Print, exec, $printscr_sf
 
 ## MODES
 
-bindr=,          swipe:4:u, submap, resize
+# bindr=,          swipe:4:u, submap, resize
 bind = $mainMod, W,         submap, resize
 submap = resize
     bind =,         W,      cyclenext, 
@@ -306,7 +306,7 @@ submap = resize
     bindm=,         longpress:1, movewindow
     bindm=,         longpress:2, resizewindow
     bind =,         tap:3,       togglefloating, 
-    bind =,         tap:4,       submap,         reset
+#bind =,         tap:4,       submap,         reset
     bindr = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
     bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 
