config changes due to idk

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,7 +179,7 @@ windowrule = center,               ^(brave-open.spotify.com.+)$
 
 $mainMod = SUPER
 
-## GLOBAL KEYS
+# GLOBAL KEYS
 
 bind = $mainMod SHIFT, C,      exec,             hyprctl reload
 bind = $mainMod SHIFT, Q,      killactive, 
@@ -198,7 +198,7 @@ bind = ALT,            Tab,    bringactivetotop,
 bind = ALT      SHIFT, Tab,    cyclenext,        prev
 bind = ALT      SHIFT, Tab,    bringactivetotop, 
 
-## FUNCTION BUTTONS
+# FUNCTION BUTTONS
 
 bindm= $mainMod, mouse:272,                     movewindow
 bindm= $mainMod, mouse:273,                     resizewindow
@@ -223,14 +223,14 @@ bind = SHIFT,    F3,                            exec,         $brightness up 1
 bind = SHIFT,    F2,                            exec,         $brightness down 1
 bind = SHIFT,    F11,                           exec,         playerctl position 5+
 
-## PRINT SCREEN
+# PRINT SCREEN
 
 bind=CONTROL SHIFT,Print, exec, $printscr_sw
 bind=SHIFT,Print, exec, $printscr_ss
 bind=$mainMod, Print, exec, $printscr_f
 bind=,Print, exec, $printscr_sf
 
-## MODES
+# MODES
 
 # bindr=,          swipe:4:u, submap, resize
 bind = $mainMod, W,         submap, resize
