switch shortcut to ncspot

--- a/.local/share/applications/spotify-tui.desktop
+++ b/.local/share/applications/spotify-tui.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
-Name=Spotify-tui
-Comment=A Spotify client for the terminal written in Rust
-Exec=kitty --class=spt zsh -c "[[ $(pgrep spt) ]] || spt"
+Name=ncspot
+Comment=A Spotify client for the terminal
+Exec=kitty --class=ncspot zsh -c "[[ $(pgrep ncspot) ]] || ncspot"
 Icon=spotify
 Terminal=false
 Categories=AudioVideo;Audio;Player;ConsoleOnly
