update to float ncspot

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -149,10 +149,10 @@ windowrule = size 70% 70%,         ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = center,               ^(brave-mail.google.com__mail_u_.-Default)$
 
-windowrule = float,                ^(spt)$
-windowrule = size 70% 70%,         ^(spt)$
-windowrule = opacity $spd_opacity, ^(spt)$
-windowrule = center,               ^(spt)$
+windowrule = float,                ^(ncspot)$
+windowrule = size 70% 70%,         ^(ncspot)$
+windowrule = opacity $spd_opacity, ^(ncspot)$
+windowrule = center,               ^(ncspot)$
 
 windowrule = float,                ^(brave-to-do.live.com.+)$
 windowrule = size 70% 70%,         ^(brave-to-do.live.com.+)$
