--- a/.local/share/applications/spotify-tui.desktop
+++ b/.local/share/applications/spotify-tui.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
 Name=ncspot
-Comment=A Spotify client for the terminal
+Comment=Cross-platform ncurses Spotify client written in Rust
 Exec=kitty --class=ncspot zsh -c "[[ $(pgrep ncspot) ]] || ncspot"
-Icon=spotify
+Icon=ncspot
 Terminal=false
-Categories=AudioVideo;Audio;Player;ConsoleOnly
+Categories=AudioVideo;Audio;Player
 Keywords=spotify;music;player
