--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "/home/yukna/.config/ranger/plugins/ranger_devicons"]
 	path = /home/yukna/.config/ranger/plugins/ranger_devicons
 	url = https://github.com/alexanderjeurissen/ranger_devicons
+[submodule ".config/zgenom"]
+	path = .config/zgenom
+	url = https://github.com/jandamm/zgenom.git
