--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,8 @@
 	path = /home/yukna/.config/ranger/plugins/ranger_devicons
 	url = https://github.com/alexanderjeurissen/ranger_devicons
 [submodule ".config/zgenom"]
-	path = .config/zgenom
+	path = .config/zsh/zgenom
+	url = https://github.com/jandamm/zgenom.git
+[submodule ".config/zsh/zgenom"]
+	path = .config/zsh/zgenom
 	url = https://github.com/jandamm/zgenom.git
