now with nixos system sans home-manager

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 
 source = ~/.cache/wal/colors-hyprland.conf
 $menu_paste = ~/.config/scripts/paste_menu.sh
-$term = kitty
+$term = foot
 $filebrowser = thunar
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
@@ -31,18 +31,18 @@ monitor =, preferred,auto,auto
 exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
 exec-once = iio-hyprland
-exec-once = /usr/lib64/polkit-kde-authentication-agent-1
-exec-once = swaync
+exec-once = mako
+exec-once = lxqt-policykit-agent
 exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-tray
 exec-once = rfkill block bluetooth
-# exec-once = gio launch .config/autostart/*
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
-# exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 exec-once = hyprpm reload -n
+# exec-once = ~/.config/scripts/lisgd_touchscreen.sh
+# exec-once = gio launch .config/autostart/*
 
 # ENV VAR
 
