fixed light, volume, and hibernate

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,11 @@
-
+# vim:ft=hyprlang
 # GLOBAL VARIABLES 
 
 source = ~/.cache/wal/colors-hyprland.conf
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = foot
 $filebrowser = thunar
+$webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
 $launcher1 = ~/.config/scripts/app_launcher.sh
@@ -27,7 +28,6 @@ monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor =, preferred,auto,auto
 
 # STARTUP
-
 exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
 exec-once = iio-hyprland
@@ -60,16 +60,17 @@ env = SCRATCHPAD_NAME,$scratchpad_name
 
 input {
     kb_layout = us
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = true
-        disable_while_typing = true
-        middle_button_emulation = true
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+   
+   follow_mouse = 1
+    
+   touchpad {
+       natural_scroll = true
+       disable_while_typing = true
+       middle_button_emulation = true
+   }
+    
+    # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 
 }
 
 decoration {
@@ -188,7 +189,7 @@ bind = $mainMod SHIFT, O,      pseudo,
 bind = $mainMod,       V,      exec,             $menu_paste
 bind = $mainMod,       Return, exec,             $term
 bind = $mainMod,       E,      exec,             thunar
-bind = $mainMod,       B,      exec,             gio launch $HOME/.local/share/applications/brave-browser.desktop
+bind = $mainMod,       B,      exec,             $webbrowser
 bind = $mainMod,       N,      exec,             swaync-client -t -sw
 bind = $mainMod,       Escape, exec,             $powermenu
 bind = $mainMod,       Tab,    togglesplit, 
