hypr configs and stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,7 +1,12 @@
 # vim:ft=hyprlang
-# GLOBAL VARIABLES 
+
+##################
+## Yukna config ##
+##################
 
 source = ~/.cache/wal/colors-hyprland.conf
+# GLOBAL VARIABLES
+
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = foot
 $filebrowser = thunar
@@ -31,7 +36,7 @@ monitor =, preferred,auto,auto
 exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
 exec-once = iio-hyprland
-exec-once = mako
+exec-once = dunst
 exec-once = lxqt-policykit-agent
 exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
@@ -60,22 +65,22 @@ env = SCRATCHPAD_NAME,$scratchpad_name
 
 input {
     kb_layout = us
-   
+
    follow_mouse = 1
-    
+
    touchpad {
        natural_scroll = true
        disable_while_typing = true
        middle_button_emulation = true
    }
-    
+
     # -1.0 - 1.0, 0 means no modification.
     sensitivity = 0 
 }
 
 decoration {
-    rounding = 10
-    drop_shadow = true
+    rounding = 0
+    drop_shadow = false
     shadow_range = 10
     shadow_render_power = 2
     col.shadow = rgba($color13ee)
