--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,14 +1,17 @@
+# vim:ft=hyprlang
+
+source = ~/.cache/wal/colors-hyprland.conf
 input-field {
     monitor =
-    size = 200, 50
+    size = 1200, 100
     outline_thickness = 3
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
+    outer_color = rgba($color14ee)
+    inner_color = rgba($foregroundee)
+    font_color = rgba($foreground)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
@@ -33,35 +36,19 @@ label {
     monitor =
     text = Hi there, $USER
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 25
+    color = rgba($foregroundee)
+    font_size = 96
     font_family = Noto Sans
     rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 80
-    halign = center
-    valign = center
-}
-
-shape {
-    monitor =
-    size = 360, 60
-    color = rgba(17, 17, 17, 1.0)
-    rounding = -1
-    border_size = 8
-    border_color = rgba(0, 207, 230, 1.0)
-    rotate = 0
-    xray = false # if true, make a "hole" in the background (rectangle of specified size, no rotation)
-
-    position = 0, 80
+    position = 0, 160
     halign = center
     valign = center
 }
 
 background {
     monitor =
-    path = /home/yukna/Pictures/wallpaper.jpg   # supports png, jpg, webp (no animations, though)
-    color = rgba(25, 20, 20, 1.0)
+    path = $wallpaper
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 0 # 0 disables blurring
