smth smth hypr plugin

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,6 +33,8 @@ monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor =, preferred,auto,auto
 
 # STARTUP
+exec-once = bash ~/.config/hypr/capture_env.sh
+exec-once = hyprpm reload -n
 exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
 exec-once = iio-hyprland
@@ -45,7 +47,6 @@ exec-once = blueman-tray
 exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
-exec-once = hyprpm reload -n
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = gio launch .config/autostart/*
 
